content/sass/components/textfield.scss
@use '../variables/all' as *;

.textfield {
    display: inline;

    &-grow {
        display: inline-flex;
        flex-direction: column;

        .text-input {
            flex-grow: 1;
            background-color: clr-neutral(100);
        }
    }

    &--vertical {
        display: flex;
        flex-direction: column;
    }
}

